fix issue on css when printing the insurance modal, the total price wrap text, admin front end

--- a/anjadsys-client/src/styles.scss
+++ b/anjadsys-client/src/styles.scss
@@ -204,7 +204,7 @@ html, body { height: 100%; padding: 0; margin: 0; direction: rtl; box-sizing: bo
               flex-direction: column;
               flex-wrap: nowrap;
               border: 1px solid gray;
-              width: 27%;
+              width: 30%;
               align-items: flex-start;
               margin-left: 0;
               margin-right: auto;
@@ -216,7 +216,7 @@ html, body { height: 100%; padding: 0; margin: 0; direction: rtl; box-sizing: bo
               display: flex;
               flex-direction: column;
               border: 1px solid gray;
-              width: 27%;
+              width: 30%;
               align-items: flex-end;
               margin-left: auto;
               margin-right: 0;
@@ -314,7 +314,7 @@ html, body { height: 100%; padding: 0; margin: 0; direction: rtl; box-sizing: bo
     flex-direction: column;
     flex-wrap: nowrap;
     border: 1px solid gray;
-    width: 27%;
+    width: 30%;
     align-items: flex-start;
     margin-left: 0;
     margin-right: auto;
@@ -325,7 +325,7 @@ html, body { height: 100%; padding: 0; margin: 0; direction: rtl; box-sizing: bo
     display: flex;
     flex-direction: column;
     border: 1px solid gray;
-    width: 27%;
+    width: 30%;
     align-items: flex-end;
     margin-left: auto;
     margin-right: 0;
